tests/snapshots/snapshot_tests__file_imports_ir.snap
---
source: tests/snapshot_tests.rs
expression: ir_context
---
SchemaContext {
    files: [
        FileDef {
            path: "file_imports.poly",
            namespaces: [
                NamespaceDef {
                    name: "",
                    datasource: None,
                    items: [
                        Struct(
                            StructDef {
                                name: "MainTable",
                                fqn: "MainTable",
                                is_embed: false,
                                datasource: None,
                                cache_strategy: None,
                                load: None,
                                is_readonly: false,
                                soft_delete_field: None,
                                pack_separator: None,
                                header: [],
                                items: [
                                    Field(
                                        FieldDef {
                                            name: "id",
                                            field_type: TypeRef {
                                                original: "u32",
                                                fqn: "u32",
                                                namespace_fqn: "",
                                                type_name: "u32",
                                                parent_type_path: "",
                                                lang_type: "u32",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                            max_length: None,
                                            default_value: None,
                                            range: None,
                                            regex_pattern: None,
                                            auto_create: None,
                                            auto_update: None,
                                            search_index: None,
                                        },
                                    ),
                                    Field(
                                        FieldDef {
                                            name: "ref_a",
                                            field_type: TypeRef {
                                                original: "ImportedA",
                                                fqn: "ImportedA",
                                                namespace_fqn: "",
                                                type_name: "ImportedA",
                                                parent_type_path: "",
                                                lang_type: "ImportedA",
                                                is_primitive: false,
                                                is_struct: true,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                            max_length: None,
                                            default_value: None,
                                            range: None,
                                            regex_pattern: None,
                                            auto_create: None,
                                            auto_update: None,
                                            search_index: None,
                                        },
                                    ),
                                    Field(
                                        FieldDef {
                                            name: "status_b",
                                            field_type: TypeRef {
                                                original: "StatusB",
                                                fqn: "StatusB",
                                                namespace_fqn: "",
                                                type_name: "StatusB",
                                                parent_type_path: "",
                                                lang_type: "StatusB",
                                                is_primitive: false,
                                                is_struct: false,
                                                is_enum: true,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                            max_length: None,
                                            default_value: None,
                                            range: None,
                                            regex_pattern: None,
                                            auto_create: None,
                                            auto_update: None,
                                            search_index: None,
                                        },
                                    ),
                                ],
                                indexes: [],
                                refs: [],
                                relations: [],
                            },
                        ),
                    ],
                },
            ],
            renames: [],
        },
        FileDef {
            path: "imported_schema_a.poly",
            namespaces: [
                NamespaceDef {
                    name: "",
                    datasource: None,
                    items: [
                        Struct(
                            StructDef {
                                name: "ImportedA",
                                fqn: "ImportedA",
                                is_embed: false,
                                datasource: None,
                                cache_strategy: None,
                                load: None,
                                is_readonly: false,
                                soft_delete_field: None,
                                pack_separator: None,
                                header: [],
                                items: [
                                    Field(
                                        FieldDef {
                                            name: "id",
                                            field_type: TypeRef {
                                                original: "u32",
                                                fqn: "u32",
                                                namespace_fqn: "",
                                                type_name: "u32",
                                                parent_type_path: "",
                                                lang_type: "u32",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                            max_length: None,
                                            default_value: None,
                                            range: None,
                                            regex_pattern: None,
                                            auto_create: None,
                                            auto_update: None,
                                            search_index: None,
                                        },
                                    ),
                                    Field(
                                        FieldDef {
                                            name: "value",
                                            field_type: TypeRef {
                                                original: "string",
                                                fqn: "string",
                                                namespace_fqn: "",
                                                type_name: "string",
                                                parent_type_path: "",
                                                lang_type: "string",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                            max_length: None,
                                            default_value: None,
                                            range: None,
                                            regex_pattern: None,
                                            auto_create: None,
                                            auto_update: None,
                                            search_index: None,
                                        },
                                    ),
                                ],
                                indexes: [],
                                refs: [],
                                relations: [],
                            },
                        ),
                    ],
                },
            ],
            renames: [],
        },
        FileDef {
            path: "imported_schema_b.poly",
            namespaces: [
                NamespaceDef {
                    name: "",
                    datasource: None,
                    items: [
                        Enum(
                            EnumDef {
                                name: "StatusB",
                                fqn: "StatusB",
                                items: [
                                    Member(
                                        EnumMember {
                                            name: "Enabled",
                                            value: Some(
                                                0,
                                            ),
                                        },
                                    ),
                                    Member(
                                        EnumMember {
                                            name: "Disabled",
                                            value: Some(
                                                1,
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                },
            ],
            renames: [],
        },
    ],
}
