tests/snapshots/snapshot_tests__inline_enum_field_table_ir.snap
---
source: tests/snapshot_tests.rs
expression: ir_context
---
SchemaContext {
    files: [
        FileDef {
            path: "inline_enum_field_table.poly",
            namespaces: [
                NamespaceDef {
                    name: "",
                    datasource: None,
                    items: [
                        Struct(
                            StructDef {
                                name: "Product",
                                fqn: "Product",
                                is_embed: false,
                                datasource: None,
                                cache_strategy: None,
                                load: None,
                                is_readonly: false,
                                soft_delete_field: None,
                                pack_separator: None,
                                header: [],
                                items: [
                                    Field(
                                        FieldDef {
                                            name: "id",
                                            field_type: TypeRef {
                                                original: "u32",
                                                fqn: "u32",
                                                namespace_fqn: "",
                                                type_name: "u32",
                                                parent_type_path: "",
                                                lang_type: "u32",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [
                                                "Key",
                                            ],
                                            is_primary_key: true,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                            max_length: None,
                                            default_value: None,
                                            range: None,
                                            regex_pattern: None,
                                            auto_create: None,
                                            auto_update: None,
                                            search_index: None,
                                        },
                                    ),
                                    Field(
                                        FieldDef {
                                            name: "name",
                                            field_type: TypeRef {
                                                original: "string",
                                                fqn: "string",
                                                namespace_fqn: "",
                                                type_name: "string",
                                                parent_type_path: "",
                                                lang_type: "string",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                            max_length: None,
                                            default_value: None,
                                            range: None,
                                            regex_pattern: None,
                                            auto_create: None,
                                            auto_update: None,
                                            search_index: None,
                                        },
                                    ),
                                    Field(
                                        FieldDef {
                                            name: "status",
                                            field_type: TypeRef {
                                                original: "StatusEnum",
                                                fqn: "Product.StatusEnum",
                                                namespace_fqn: "Product",
                                                type_name: "StatusEnum",
                                                parent_type_path: "",
                                                lang_type: "StatusEnum",
                                                is_primitive: false,
                                                is_struct: false,
                                                is_enum: true,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                            max_length: None,
                                            default_value: None,
                                            range: None,
                                            regex_pattern: None,
                                            auto_create: None,
                                            auto_update: None,
                                            search_index: None,
                                        },
                                    ),
                                    InlineEnum(
                                        EnumDef {
                                            name: "StatusEnum",
                                            fqn: "Product.StatusEnum",
                                            items: [
                                                Member(
                                                    EnumMember {
                                                        name: "Available",
                                                        value: Some(
                                                            0,
                                                        ),
                                                    },
                                                ),
                                                Member(
                                                    EnumMember {
                                                        name: "OutOfStock",
                                                        value: Some(
                                                            1,
                                                        ),
                                                    },
                                                ),
                                                Member(
                                                    EnumMember {
                                                        name: "Discontinued",
                                                        value: Some(
                                                            2,
                                                        ),
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                ],
                                indexes: [
                                    IndexDef {
                                        name: "ById",
                                        schema_name: None,
                                        fields: [
                                            IndexFieldDef {
                                                name: "id",
                                                field_type: TypeRef {
                                                    original: "u32",
                                                    fqn: "u32",
                                                    namespace_fqn: "",
                                                    type_name: "u32",
                                                    parent_type_path: "",
                                                    lang_type: "u32",
                                                    is_primitive: true,
                                                    is_struct: false,
                                                    is_enum: false,
                                                    is_option: false,
                                                    is_list: false,
                                                    inner_type: None,
                                                },
                                            },
                                        ],
                                        is_unique: true,
                                        source: "constraint",
                                    },
                                ],
                                refs: [],
                                relations: [],
                            },
                        ),
                    ],
                },
            ],
            renames: [],
        },
    ],
}
